--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 wandb/
-legacy/
 __pycache__/
-data/
-slurm*
 nohup.out
 .DS_Store
-results/**
-cattaneo**
 **ipynb
 ***.sh
 .vscode/settings.json
 RAMEN.egg-info/**
+logs/
